# lightbook-studio

./: .gitignore  README.md  config.json  pyproject.toml  requirements-dev.txt
app/: __init__.py  main.py
app/ai/: __init__.py  config.py  context_builder.py  metadata_schema.py  mock_provider.py  openai_compatible_provider.py  provider.py  provider_factory.py  suggestion_service.py  title_cleaner.py  types.py
app/core/: __init__.py  cache_cleanup.py  config.py  local_secrets.py  logging_config.py  models.py
app/exporters/: __init__.py  cbz_exporter.py  cbz_metadata_rewriter.py  comicinfo_writer.py  epub_exporter.py
app/gui/: ai_suggestions_tab.py  basic_info_tab.py  cache_binding.py  chapters_tab.py  cover_search_tab.py  detail_tabs.py  export_cache_tab.py  library_page.py  main_window.py  metadata_search_dialog.py  settings_page.py  widgets.py  workers.py
app/importers/: __init__.py  cbz_importer.py  comic_epub_importer.py  image_folder_importer.py  novel_txt_importer.py
app/parsers/: __init__.py  novel_chapter_parser.py
app/search/: __init__.py  ai_query_planner.py  ai_search_provider.py  candidate_ranker.py  config.py  content_extractor.py  mediawiki_utils.py  mock_search_provider.py  types.py  (+6 more)
data/: lightbook.db
lightbook_studio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_ai_config.py  test_ai_context_builder.py  test_ai_metadata_schema.py  test_ai_prompt_context.py  test_ai_prompt_quality.py  test_ai_provider.py  test_ai_provider_factory.py  test_ai_request_logs.py  test_ai_search_provider.py  test_ai_suggestion_display.py  test_ai_suggestion_service.py  test_ai_suggestions_repository.py  test_background_workers.py  test_bangumi_provider.py  test_batch_export_service.py  test_batch_import_service.py  test_cache_binding.py  test_cache_cleanup.py  test_cbz_exporter.py  test_cbz_importer.py  test_cbz_metadata_rewriter.py  test_comic_epub_importer.py  test_comicinfo_writer.py  test_content_extractor.py  test_database.py  test_database_migrations.py  test_epub_exporter.py  test_filename_parser.py  test_gui_batch_selection.py  test_image_folder_importer.py  test_logging_config.py  test_mediawiki_utils.py  test_metadata_search_cache.py  test_metadata_search_service.py  test_moegirl_provider.py  test_natural_sort.py  test_novel_chapter_parser.py  test_novel_txt_importer.py  test_openai_compatible_provider.py  test_output_planner.py  (+15 more)
(+22 files in other folders)
