[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lightbook-studio"
version = "0.2.0"
description = "Local manga/light novel organizer for Komga-friendly CBZ exports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.6",
  "Pillow>=10.0",
  "beautifulsoup4>=4.12",
  "ebooklib>=0.18",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
lightbook-studio = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.storage" = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
