[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lightbook-studio"
version = "0.4.1"
description = "Local manga/light novel organizer for Komga-friendly CBZ/EPUB exports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.6",
  "Pillow>=10.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
epub = [
  "ebooklib>=0.18",
]
web = [
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
]
cjk = [
  "opencc-python-reimplemented>=0.1.7",
]
dev = [
  "pytest>=8.0",
  "pytest-qt>=4.4",
  "pytest-cov>=5.0",
]
all = [
  "ebooklib>=0.18",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "opencc-python-reimplemented>=0.1.7",
]

[project.scripts]
lightbook-studio = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.storage" = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
cache_dir = ".pytest_cache"
